// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#003366]  1`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "titleColor": "#B8C2CC",
}
`;

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#7AC1FA]  1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "titleColor": "#B8C3CC",
}
`;

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#545028]  1`] = `
{
  "background": {
    "colors": [
      "#262302",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66655C",
  "color": "#545028",
  "titleColor": "#CCCAB8",
}
`;

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#662088]  1`] = `
{
  "background": {
    "colors": [
      "#1A0226",
      "#1A1A1A",
    ],
  },
  "borderColor": "#635C66",
  "color": "#662088",
  "titleColor": "#C5B8CC",
}
`;

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#CDD2FC]  1`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "titleColor": "#B8BACC",
}
`;

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#E9FE96]  1`] = `
{
  "background": {
    "colors": [
      "#1F2602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#64665C",
  "color": "#E9FE96",
  "titleColor": "#C8CCB8",
}
`;

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#FF4920]  1`] = `
{
  "background": {
    "colors": [
      "#260902",
      "#1A1A1A",
    ],
  },
  "borderColor": "#665E5C",
  "color": "#FF4920",
  "titleColor": "#CCBBB8",
}
`;

exports[`generateCredentialCardConfig when color scheme is [dark] should match snapshot for color [#FFB357]  1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "titleColor": "#CCC3B8",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#003366]  1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "titleColor": "#2B2F33",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#7AC1FA]  1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "titleColor": "#2B3033",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#545028]  1`] = `
{
  "background": {
    "colors": [
      "#FFFDE6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#999673",
  "color": "#545028",
  "titleColor": "#33322B",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#662088]  1`] = `
{
  "background": {
    "colors": [
      "#F7E6FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#8C7399",
  "color": "#662088",
  "titleColor": "#302B33",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#CDD2FC]  1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "titleColor": "#2B2C33",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#E9FE96]  1`] = `
{
  "background": {
    "colors": [
      "#FAFFE6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#919973",
  "color": "#E9FE96",
  "titleColor": "#31332B",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#FF4920]  1`] = `
{
  "background": {
    "colors": [
      "#FFEAE6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#997A73",
  "color": "#FF4920",
  "titleColor": "#332D2B",
}
`;

exports[`generateCredentialCardConfig when color scheme is [light] should match snapshot for color [#FFB357]  1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "titleColor": "#33302B",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#003366]  1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "titleColor": "#2B2F33",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#7AC1FA]  1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "titleColor": "#2B3033",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#545028]  1`] = `
{
  "background": {
    "colors": [
      "#FFFDE6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#999673",
  "color": "#545028",
  "titleColor": "#33322B",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#662088]  1`] = `
{
  "background": {
    "colors": [
      "#F7E6FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#8C7399",
  "color": "#662088",
  "titleColor": "#302B33",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#CDD2FC]  1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "titleColor": "#2B2C33",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#E9FE96]  1`] = `
{
  "background": {
    "colors": [
      "#FAFFE6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#919973",
  "color": "#E9FE96",
  "titleColor": "#31332B",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#FF4920]  1`] = `
{
  "background": {
    "colors": [
      "#FFEAE6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#997A73",
  "color": "#FF4920",
  "titleColor": "#332D2B",
}
`;

exports[`generateCredentialCardConfig when color scheme is [undefined] should match snapshot for color [#FFB357]  1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig should match snapshot for type [EuropeanDisabilityCard] 1`] = `
{
  "background": {
    "colors": [
      "#D6EAF7",
    ],
  },
  "borderColor": "#6B9BB6",
  "color": "#D6EAF7",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_card_overlay.png",
  },
  "titleColor": "#17406F",
}
`;

exports[`getCredentialCardConfig should match snapshot for type [EuropeanHealthInsuranceCard] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#B7E1FA",
      "#D0EDFF",
      "#B7E1FA",
      "#D0EDFF",
    ],
    "positions": [
      0.0031,
      0.3686,
      0.6772,
      0.9904,
    ],
  },
  "borderColor": "#449DCF",
  "color": "#B7E1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_card_overlay.png",
  },
  "titleColor": "#032D5C",
}
`;

exports[`getCredentialCardConfig should match snapshot for type [PersonIdentificationData] 1`] = `
{
  "background": {
    "angle": 217,
    "colors": [
      "#EAF6FF",
      "#F6FBFF",
      "#EAF6FF",
      "#F9F9F9",
      "#EAF6FF",
    ],
    "positions": [
      0.0349,
      0.2514,
      0.4646,
      0.7143,
      0.9425,
    ],
  },
  "borderColor": "#4F99E2",
  "color": "#EAF6FF",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_card_overlay.png",
  },
  "titleColor": "#115486",
}
`;

exports[`getCredentialCardConfig should match snapshot for type [age_verification] 1`] = `
{
  "background": {
    "angle": 180,
    "colors": [
      "#ECECEC",
      "#CECFF2",
    ],
  },
  "borderColor": "#9490BE",
  "color": "#CECFF2",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "titleColor": "#363740",
}
`;

exports[`getCredentialCardConfig should match snapshot for type [education_attendance] 1`] = `undefined`;

exports[`getCredentialCardConfig should match snapshot for type [education_degree] 1`] = `undefined`;

exports[`getCredentialCardConfig should match snapshot for type [education_diploma] 1`] = `undefined`;

exports[`getCredentialCardConfig should match snapshot for type [education_enrollment] 1`] = `undefined`;

exports[`getCredentialCardConfig should match snapshot for type [mDL] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#FADCF5",
      "#FFECFC",
      "#FADCF5",
      "#FFECFC",
    ],
    "positions": [
      0.0041,
      0.3614,
      0.6716,
      1.0251,
    ],
  },
  "borderColor": "#D674A9",
  "color": "#FADCF5",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_card_overlay.png",
  },
  "titleColor": "#652035",
}
`;

exports[`getCredentialCardConfig should match snapshot for type [residency] 1`] = `undefined`;

exports[`getCredentialCardConfig should match snapshot for type [unknown_credential_type] 1`] = `undefined`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [] 1`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8BACC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [0] 1`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C2CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [1] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [42] 1`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/6.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/6.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C2CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [999] 1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [a] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [education_attendance] 1`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8BACC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [education_degree] 1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [education_diploma] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [education_enrollment] 1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [eu.europa.ec.eudi.mdl.1] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [eu.europa.ec.eudi.pid.1] 1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [org.iso.someNewCredential] 1`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C2CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [residency] 1`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C2CC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [unknown_credential_type] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [dark] should match snapshot for credential id [🪪] 1`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8BACC",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [0] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [1] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [42] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/6.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/6.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [999] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [a] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [education_attendance] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [education_degree] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [education_diploma] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [education_enrollment] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [eu.europa.ec.eudi.mdl.1] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [eu.europa.ec.eudi.pid.1] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [org.iso.someNewCredential] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [residency] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [unknown_credential_type] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [light] should match snapshot for credential id [🪪] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [0] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [1] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [42] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/6.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/6.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [999] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [a] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [education_attendance] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [education_degree] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [education_diploma] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [education_enrollment] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [eu.europa.ec.eudi.mdl.1] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [eu.europa.ec.eudi.pid.1] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [org.iso.someNewCredential] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [residency] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [unknown_credential_type] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getRandomCredentialCardConfig when color scheme is [undefined] should match snapshot for credential id [🪪] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;
